feat(report): appliedTo field for filters (#3626)
relates to #OPT-5335